--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,19 @@ body p {
     width: 20px;
 }
 
+.Cabeca {
+    font-size: 20px;
+    text-align: center;
+    text-transform: uppercase;
+    background: none;
+    color: var(--primary);
+    margin: 5px;
+    padding: 6px 12px;
+    border-radius: 20px;
+    border: 2px solid var(--secondary);
+    box-shadow: 1px 1px 15px 3px rgba(255, 255, 255, 0.6);
+}
+
 .itens {
     font-size: 20px;
     text-align: center;
@@ -71,17 +84,22 @@ body p {
     padding: 20px 0px;
 }
 
+.escolhaServico {
+    display: block;
+    text-align: center;
+}
+
 footer {
     display: block;
     text-align: center;
-    padding: 10px 10px 10px 10px;
+    padding: 10px;
     margin: 15px;
     color: var(--primary);
-    font-size: 12px;
+    font-size: 14px;
     font-weight: bold;
 }
 
 footer p {
     text-align: center;
-    font-size: 12px;
+    font-size: 14px;
 }
