--- a/css/servicos.css
+++ b/css/servicos.css
@@ -3,6 +3,12 @@
     --secondary: black;
 }
 
+div {
+    display: flex;
+    display: grid;
+    justify-content: center;
+}
+
 ul {
     list-style: none;
     padding: 0;
