--- a/css/servicos.css
+++ b/css/servicos.css
@@ -13,6 +13,7 @@ div {
 label {
     display: block;
     margin-top: 10px;
+    margin-left: 10px;
     font-weight: bold;
 }
 
@@ -20,6 +21,7 @@ input, select, button {
     width: 300px;
     padding: 10px;
     margin-top: 5px;
+    margin-left: 10px;
     border-radius: 5px;
     border: 1px solid var(--primary);
 }
